Correct grid, align icon and crypto name to left

--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -61,21 +61,17 @@
     justify-items: center;
     align-items: center;
     font-size: 1.4rem;
-    grid-template-columns: repeat(7, 1fr) 20px;
-    @media (max-width: $breakpoint-small) {
-      grid-template-columns: 1fr;
-    }
+    grid-template-columns: repeat(7, minmax(max-content, 1fr)) 20px;
     border-bottom: 1px solid $color-grey-light-2;
-    padding-bottom: 1rem;
+    padding: 1rem;
     margin-bottom: 1rem;
     &--small {
       grid-template-columns: repeat(5, 1fr) 20px;
-      @media (max-width: $breakpoint-small) {
-        grid-template-columns: 1fr;
-      }
     }
     & div:nth-child(2) {
       @include flex-center;
+      justify-self: start;
+
       & img {
         width: 2rem;
         margin-right: 0.6rem;
